--- a/public_html/style/header.html
+++ b/public_html/style/header.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="/style/generic.css">
   <link rel="stylesheet" href="/style/voting.css">
   <link rel="stylesheet" href="/style/custom.css">
+  <link rel="icon" href="data:image/svg+xml,&lt;svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22&gt;&lt;text y=%22.9em%22 font-size=%2290%22&gt;🗳&lt;/text&gt;&lt;/svg&gt;">
 </head>
 
 <body>	
@@ -20,11 +21,11 @@
 					<div class="nav">
 						
 					    <ul class="page-list">
-							<li class="page_item home"><a href="/" title="Home">🏠</a></li>
+							<li class="page_item home"><a href="/" title="Home">🏠 Home</a></li>
+							<li class="page_item archive"><a href="/about.html" title="About the voting system">💡 About</a></li>
 							<li class="page_item open"><a href="/open.html" title="Currently-open ballots">💬 Open Ballots</a></li>
 							<li class="page_item forthcoming"><a href="/forthcoming.html" title="Forthcoming ballots">⏰ Forthcoming</a></li>
 							<li class="page_item closed"><a href="/closed.html" title="Recent ballots now closed">📚 Recent</a></li>
-							<li class="page_item archive"><a href="/archive.html" title="Archive of older ballots">🗂️ Archive</a></li>
 							<li class="page_item controlpanel"><a href="/controlpanel/" title="Add new ballots or administer existing ones">⚙️ Control panel</a></li>
 						</ul>   
 					</div>
