Update header & footer

--- a/public_html/style/header.html
+++ b/public_html/style/header.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
 	
-  <title>CambVote</title>
+  <title>camvote.org</title>
 	<link rel="stylesheet" href="/style/generic.css">
   <link rel="stylesheet" href="/style/voting.css">
   <link rel="stylesheet" href="/style/custom.css">
@@ -16,7 +16,7 @@
 	<div id="outercontainer">
       
       <div id="header">
-        <h1 class="header-title"><a href="/">Cambridge Student Election System</a></h1>
+        <h1 class="header-title"><a href="/">camvote.org</a></h1>
       </div>
 					<div class="nav">
 						
