--- a/public_html/style/footer.html
+++ b/public_html/style/footer.html
@@ -1,8 +1,7 @@
 				</div>
 				<div id="footer">
 					
-					<p>2021 Cambridge Student Election System</p>
-		
+					<p>2022 camvote.org. Any problems? Email <a href="mailto:sysadmins@camvote.org" style="color:white">sysadmins@camvote.org</a>. <a href="https://github.com/camvote" style="color:white">Source code</a></p>
 				</div>
 			</div>
 
